--- a/public/index.html
+++ b/public/index.html
@@ -20,17 +20,22 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146217430-1"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-146217430-1"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'UA-146217430-1');
+      gtag("config", "UA-146217430-1");
     </script>
 
     <style>
-      @import url('https://fonts.googleapis.com/css?family=Noto+Sans+HK:400,700|Roboto:300,400,700&display=swap');
+      @import url("https://fonts.googleapis.com/css?family=Noto+Sans+HK:400,700|Roboto:300,400,700&display=swap");
     </style>
     <title>Kadhir Umasankar</title>
   </head>
